playbooks/argocd/applications/media/dispatcharr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcharr
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.20.0/24,100.64.0.0/10,10.233.0.0/16
    nginx.ingress.kubernetes.io/auth-url: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-proxy-set-headers: media/auth-proxy-set-headers-dispatcharr
    nginx.ingress.kubernetes.io/auth-signin: https://dispatcharr.soyspray.vip/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,Authorization,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
spec:
  ingressClassName: nginx
  tls: [{hosts: [dispatcharr.soyspray.vip], secretName: prod-cert-tls}]
  rules:
    - host: dispatcharr.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: dispatcharr, port: {number: 9191}}
